css/styles.css
/* Color Pallete */
:root {
    --color-primary: #1E2D3B;
    --color-secondary: #d6d6b1;
    --color-accent: #EDCD1F;
    --color-text: #3D5975;
    --color-quaternary: #878472; 
}

*,
::before,
::after {
    box-sizing: border-box;
    margin: 0;
    scroll-behavior: smooth;
}

::selection {
    background: var(--color-accent);
    color: #000;
}



/* Typography */
html {
    font-size: 62.5%;
}

body {
    font-family: Rubik, Arial, Helvetica, sans-serif;
}

h1 {
    font-size: 3.5rem;
}

h2 {
    font-size: 2.4rem;
}

a {
    text-decoration: none;
}

@media screen and (min-width: 768px) {
    h1 {
        font-size: 5.5rem;
    }
}




/* Cards */
.card {
    width: 100%;
    height: 100%;
    max-width: 350px;
    background: #f7f7f7;
}

.card__image {
    width: 100%;
    min-width: 250px;
}

.card__body {
    padding: 2rem;
}

.card__heading {
    margin: 1.5rem 0 1rem 0;
    color: var(--color-primary);
}

.card__text {
    margin: 2rem 0;
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.5;
}




/* Grid */
.grid {
    display: grid;
}

@media screen and (min-width:768px) {
    .grid--1x2 {
        grid-template-columns: repeat(2, 1fr);
    }

    .grid--1x3 {
        grid-template-columns: repeat(3, 1fr);
    }
}

.container {
    max-width: 1140px;
    margin: 0 auto;
}




/* Banner */
.banner-background {
    background: var(--color-accent);
}

.banner {
    background: var(--color-accent);
    text-align: center;
    color: var(--color-text);
    margin: 0 auto;
}

.banner.grid {
    grid-template-columns: repeat(2, 1fr);

    justify-items: center;
}

.banner__heading {
    font-size: 3.5rem;
    margin: 2rem 0 1rem;
    font-weight: 500;
}

.banner__text {
    font-size: 2.4rem;
    word-spacing: 100vh;
    font-weight: 500;
    margin: 0 0 2rem 0;
}


@media screen and (min-width:768px) {
    .banner {
        padding: 2rem;
    }
    .banner.grid {
        grid-template-columns: repeat(4, 1fr);
    }

    .banner__heading {
        font-size: 6rem;
    }

    .banner__year {
        border-right: 2px solid #fff;
        position: relative;
    }

    .banner__year::before {
        content: '';
        display: block;
        position: absolute;
        background: var(--color-accent);
        height: 40px;
        width: 25px;
        right: -15px;
    }

    .banner__year::after {
        content: '';
        display: block;
        position: absolute;
        background: var(--color-accent);
        height: 40px;
        width: 25px;
        bottom: 0;
        right: -15px;
    }

    .banner__projects {
        border-right: 2px solid #fff;
        position: relative;
    }

    .banner__projects::before {
        content: '';
        display: block;
        position: absolute;
        background: var(--color-accent);
        height: 40px;
        width: 25px;
        right: -15px;
    }

    .banner__projects::after {
        content: '';
        display: block;
        position: absolute;
        background: var(--color-accent);
        height: 40px;
        width: 25px;
        bottom: 0;
        right: -15px;
    }

    .banner__contractors {
        border-right: 2px solid #fff;
        position: relative;
    }

    .banner__contractors::before {
        content: '';
        display: block;
        position: absolute;
        background: var(--color-accent);
        height: 40px;
        width: 25px;
        right: -15px;
    }

    .banner__contractors::after {
        content: '';
        display: block;
        position: absolute;
        background: var(--color-accent);
        height: 40px;
        width: 25px;
        bottom: 0;
        right: -15px;
    }
}




/* Contact */
.contact__heading {
    font-size: 2.4rem;
    font-weight: 500;
    margin-bottom: 2rem;
}
.contact-form {
    margin: 2rem 1rem ;
}
.contact__label {
    display: block;
    font-size: 1.8rem;
    margin-bottom: 0.5rem;
    font-weight: 300;
}

.input-group {
    margin: 1rem 0;
}


.input {
    outline: 0;
    border: 1px solid var(--color-primary);
    border-radius: 1px;
    background: #f7f7f7;
    font-size: 1.8rem;
    width: 100%;
    padding: 0.5rem;
}

.input:hover,
.input:focus {
    background: #b7b7b7;
    outline: 1px solid rgb(46, 46, 46);
}

.contact__btn {
    background: var(--color-primary);
    border: none;
    color: var(--color-accent);
    cursor: pointer;
    font-size: 1.5rem;
    font-weight: 500;
    outline: 0;
    padding: 1.2rem 5rem;
    text-transform: capitalize;
    transition: 0.3s;
}

.contact__btn:hover {
    background: var(--color-accent);
    color: var(--color-primary);
}

.button-container {
    display: flex;
    justify-content: end;
}

textarea {
    resize: none;
}




/* Project Card */
.project {
    position: relative;
    max-height: 500px;
    max-width: 500px;
}

.project__image {
    width: 100%;
}

.project__image:hover {
    width: 110%;
}

.project__overlay {
    background-color: #000;
    cursor: pointer;
    height: 100%;
    opacity: 0;
    position: absolute;
    top: 0;
    transition: 0.3s ease-in-out;
    width: 100%;
}

.project__overlay:hover {
    opacity: 0.8;
}

.project__text {
    text-decoration: none;
    font-weight: 400;
    color: #fff;
    position: absolute;
    font-size: 2.4rem;
    top: 45%;
    left: 50%;
    transform: translate(-50%);
    text-align: center;
}




/* Hero */
.hero {
    position: relative;
}
.hero__video {
    width: 100%;
    height: 100%;
}

.hero__overlay {
    margin: 0 auto;
    position: absolute;
    top: 20%;
    right: 0;
    bottom: 0;
    left: 0;
    height: 100%;
    width: 100%;
}

.hero__text {
    color: #fff;
    text-transform: uppercase;
    font-weight: 500;
    text-align: center;
    letter-spacing: 2px;
    font-size: 2.4rem;
    text-shadow: 0 0 15px #000;
}

.hero__arrow {
    margin-top: 2rem;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 0.3s;
    cursor: pointer;
}
/* ... */

